experiments/convoLOG2/8957.log
/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk3/tmp_files/8957.c(67): warning #161: unrecognized #pragma
    #pragma scop
            ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk3/tmp_files/8957.c(69): error: unrecognized OpenMP #pragma
  #pragma omp 
          ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk3/tmp_files/8957.c(72): error: "#" not expected here
      #pragma omp target teams distribute  dist_schedule(static, #p11)
                                                                 ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk3/tmp_files/8957.c(72): error: expected an expression
      #pragma omp target teams distribute  dist_schedule(static, #p11)
                                                                 ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk3/tmp_files/8957.c(72): error: expected a ")"
      #pragma omp target teams distribute  dist_schedule(static, #p11)
                                                                 ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk3/tmp_files/8957.c(80): warning #161: unrecognized #pragma
    #pragma endscop
            ^

compilation aborted for /uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk3/tmp_files/8957.c (code 2)
